samples/_failures_safe/1761508014_2bd291_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5058972.c: In function ‘main’:
./samples/SAFE/__tmp_e5058972.c:152:17: error: expected declaration or statement at end of input
  152 |                 if (fgets(to, sizeof(to), stdin) == NULL) break;
      |                 ^~
./samples/SAFE/__tmp_e5058972.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5058972.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5058972.c:152:17: error: expected declaration or statement at end of input
